# agent-code

./: .gitignore  LICENSE  pyproject.toml
src/agent_code/: __init__.py  agent.py  cli.py  diff_ui.py  file_history.py  fs_safety.py  model.py  tools.py
