[project]
name = "agent-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mickylab", email = "zhangn442@hotmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "html2text>=2025.4.15",
    "pathspec>=1.1.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.3",
]

[project.scripts]
agent-code = "agent_code.cli:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
